--- a/_includes/members.html
+++ b/_includes/members.html
@@ -4,11 +4,16 @@
     <hr class="divider my-4">
     <div class="row justify-content-center">
       {% for member in section.members %}
+      {% assign fa = member.icon_type | default: "fab" %}
       <div class="col-lg-3 col-md-6 text-center">
         <div class="member-box">
           <img class="fa fa-4x text-primary" src="{{ member.image }}" alt="{{ member.title }}">
           <h3 class="h4 mb-2">{{ member.title }}</h3>
           <p class="text-white-50 mb-0">{{ member.text }}</p>
+          <a href="{{ member.url_linkedin }}" target="_blank"><i
+              class="{{fa}} {{member.icon_linkedin}} fa-2x mt-2 text-white"></i></a>
+          <a href="{{ member.url_github }}" target="_blank"><i
+              class="{{fa}} {{member.icon_github}} fa-2x mt-2 text-white"></i></a>
         </div>
       </div>
       {% endfor %}
