--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10054,10 +10054,10 @@ hr.light {
   #mainNav .navbar-brand {
     color: rgba(255, 255, 255, 0.7);
     img.logo-white {
-      visibility: visible !important;
+      visibility: visible;
     }
     img.logo-color {
-      visibility: hidden !important;
+      visibility: hidden;
     }
   }
   #mainNav .navbar-brand:hover {
@@ -10080,10 +10080,10 @@ hr.light {
   #mainNav.navbar-scrolled .navbar-brand {
     color: #212529;
     img.logo-white {
-      visibility: hidden !important;
+      visibility: hidden;
     }
     img.logo-color {
-      visibility: visible !important;
+      visibility: visible;
     }
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
