--- a/_includes/culture.html
+++ b/_includes/culture.html
@@ -1,5 +1,5 @@
-<section class="page-section" id="{{ section.section_id }}">
-  <div class="{{ section.background_style }}">
+<section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
+  <div>
     <div class="container-fluid p-0">
       <h2 class="text-center mt-0">{{ section.title }}</h2>
       <hr class="divider my-4">
@@ -9,7 +9,7 @@
           <a class="portfolio-box">
             <img class="img-fluid" src="assets/img/culture/thumbnails/{{ item.icon }}" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-category text-white-75">
                 {{ item.title }}
               </div>
               <div class="project-name">
