--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,7 @@
 <footer class="bg-light py-5">
   <div class="container">
     <div class="small text-center text-muted">
-      {{ site.data.footer.copyright }}
-      &nbsp;
-      {% for link in site.data.footer.links %}
-          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
-          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
-          {% endif %}>{{ link.text }}</a>
-      {% endfor %} 
+      Florianópolis - SC, Brasil 
     </div>
   </div>
 </footer>
