--- a/_includes/culture.html
+++ b/_includes/culture.html
@@ -7,7 +7,7 @@
         {% for item in section.items %}
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box">
-            <img class="img-fluid" src="assets/img/culture/thumbnails/{{ item.icon }}" alt="">
+            <img class="img-fluid" src="assets/img/culture/{{ item.icon }}" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-75">
                 {{ item.title }}
