--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10148,8 +10148,7 @@ header.masthead h1 {
   position: relative;
   display: block;
 }
-#portfolio .container-fluid .portfolio-box .portfolio-box-caption, #portfolio .container-sm .portfolio-box .portfolio-box-caption, #portfolio .container-md .portfolio-box .portfolio-box-caption, #portfolio .container-lg .portfolio-box .portfolio-box-caption, #portfolio .container-xl .portfolio-box .portfolio-box-caption,
-#cultura .container-fluid .portfolio-box .portfolio-box-caption, #cultura .container-sm .portfolio-box .portfolio-box-caption, #cultura .container-md .portfolio-box .portfolio-box-caption, #cultura .container-lg .portfolio-box .portfolio-box-caption, #cultura .container-xl .portfolio-box .portfolio-box-caption {
+#portfolio .container-fluid .portfolio-box .portfolio-box-caption, #portfolio .container-sm .portfolio-box .portfolio-box-caption, #portfolio .container-md .portfolio-box .portfolio-box-caption, #portfolio .container-lg .portfolio-box .portfolio-box-caption, #portfolio .container-xl .portfolio-box .portfolio-box-caption {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10161,10 +10160,26 @@ header.masthead h1 {
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(255, 102, 32, 0.9);
+  text-shadow: 0 3px 10px black;
+  background: rgba(128, 48, 16, 0.7);
   transition: opacity 0.25s ease;
   text-align: center;
   cursor: pointer;
+}
+#cultura .container-fluid .portfolio-box .portfolio-box-caption, #cultura .container-sm .portfolio-box .portfolio-box-caption, #cultura .container-md .portfolio-box .portfolio-box-caption, #cultura .container-lg .portfolio-box .portfolio-box-caption, #cultura .container-xl .portfolio-box .portfolio-box-caption {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 4px 10px black;
+  background: rgba(128, 48, 16, 0.7);
+  text-align: center;
 }
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category,
 #cultura .container-fluid .portfolio-box .portfolio-box-caption .project-category, #cultura .container-sm .portfolio-box .portfolio-box-caption .project-category, #cultura .container-md .portfolio-box .portfolio-box-caption .project-category, #cultura .container-lg .portfolio-box .portfolio-box-caption .project-category, #cultura .container-xl .portfolio-box .portfolio-box-caption .project-category {
