CU-7bk8tp - Added Clients icons in Services section

--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10200,3 +10200,14 @@ header.masthead h1 {
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
 }
+
+.client-list {
+  align-items: center;
+}
+
+.client-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 0;
+}
