--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,11 +1,13 @@
-<div class="page-section" id="{{ section.section_id }}">
+<section class="page-section" id="{{ section.section_id }}">
   <div class="container-fluid p-0">
-    <div class="row no-gutters client-list">
+    <h3 class="text-center mt-0">{{ section.title }}</h3>
+    <hr class="divider my-4">
+    <div class="row justify-content-center">
       {% for client in section.clients %}
-      <div class="col-lg-4 col-sm-6 client-content">
+      <div class="col-lg-3 col-md-6 client-content">
         <img class="img-fluid" src="assets/img/clients/{{ client.icon }}" alt="">
       </div>
       {% endfor %}
     </div>
   </div>
-</div>
+</section>
