--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,5 +1,7 @@
 <div id="portfolio" class="{{ section.background_style }}">
   <div class="container-fluid p-0">
+    <h3 class="text-center mt-0">{{ section.title }}</h3>
+    <hr class="divider my-4">
     <div class="row no-gutters">
       {% for proj in section.projects %}
       <div class="col-lg-4 col-sm-6">
