--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10191,6 +10191,7 @@ header.masthead h1 {
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-name,
 #cultura .container-fluid .portfolio-box .portfolio-box-caption .project-name, #cultura .container-sm .portfolio-box .portfolio-box-caption .project-name, #cultura .container-md .portfolio-box .portfolio-box-caption .project-name, #cultura .container-lg .portfolio-box .portfolio-box-caption .project-name, #cultura .container-xl .portfolio-box .portfolio-box-caption .project-name {
   font-size: 1rem;
+  padding-top: 0.5em;
 }
 #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption,
 #cultura .container-fluid .portfolio-box:hover .portfolio-box-caption, #cultura .container-sm .portfolio-box:hover .portfolio-box-caption, #cultura .container-md .portfolio-box:hover .portfolio-box-caption, #cultura .container-lg .portfolio-box:hover .portfolio-box-caption, #cultura .container-xl .portfolio-box:hover .portfolio-box-caption {
