--- a/_includes/members.html
+++ b/_includes/members.html
@@ -8,12 +8,13 @@
       <div class="col-lg-3 col-md-6 text-center">
         <div class="member-box">
           <img class="fa fa-4x text-primary" src="{{ member.image }}" alt="{{ member.title }}">
-          <h3 class="h4 mb-2">{{ member.title }}</h3>
+          <h4 class="mb-2">{{ member.title }}</h4>
           <p class="text-white-75 mb-0">{{ member.text }}</p>
           <a href="{{ member.url_linkedin }}" target="_blank"><i
               class="{{fa}} {{member.icon_linkedin}} fa-2x mt-2 text-white"></i></a>
           <a href="{{ member.url_github }}" target="_blank"><i
               class="{{fa}} {{member.icon_github}} fa-2x mt-2 text-white"></i></a>
+          <p class="text-white-75 text-monospace mb-0">"{{ member.subtext }}"</p>
         </div>
       </div>
       {% endfor %}
