CU-6f2fh9 - Create version in English

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="small text-center text-muted">
-      Florianópolis - SC, Brasil 
-    </div>
+    <div class="small text-center text-muted">{{ site.data.footer.copyright }}</div>
+    <div class="small text-center text-muted">{% t site.data.footer.address %}</div>
   </div>
 </footer>
