--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,7 +17,7 @@
   <!-- Third party plugin CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw==" crossorigin="anonymous" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="assets/css/creative.css" rel="stylesheet">
+  <link href="{{ "/assets/css/creative.css" | prepend: site.baseurl_root }}" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
 
