--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10140,11 +10140,11 @@ header.masthead h1 {
 }
 
 #portfolio .container-fluid, #portfolio .container-sm, #portfolio .container-md, #portfolio .container-lg, #portfolio .container-xl, 
-#cultura .container-fluid, #cultura .container-sm, #cultura .container-md, #cultura .container-lg, #cultura .container-xl {
+#culture .container-fluid, #culture .container-sm, #culture .container-md, #culture .container-lg, #culture .container-xl {
   max-width: 1920px;
 }
 #portfolio .container-fluid .portfolio-box, #portfolio .container-sm .portfolio-box, #portfolio .container-md .portfolio-box, #portfolio .container-lg .portfolio-box, #portfolio .container-xl .portfolio-box, 
-#cultura .container-fluid .portfolio-box, #cultura .container-sm .portfolio-box, #cultura .container-md .portfolio-box, #cultura .container-lg .portfolio-box, #cultura .container-xl .portfolio-box {
+#culture .container-fluid .portfolio-box, #culture .container-sm .portfolio-box, #culture .container-md .portfolio-box, #culture .container-lg .portfolio-box, #culture .container-xl .portfolio-box {
   position: relative;
   display: block;
 }
@@ -10166,7 +10166,7 @@ header.masthead h1 {
   cursor: pointer;
   padding: 10px 20px;
 }
-#cultura .container-fluid .portfolio-box .portfolio-box-caption, #cultura .container-sm .portfolio-box .portfolio-box-caption, #cultura .container-md .portfolio-box .portfolio-box-caption, #cultura .container-lg .portfolio-box .portfolio-box-caption, #cultura .container-xl .portfolio-box .portfolio-box-caption {
+#culture .container-fluid .portfolio-box .portfolio-box-caption, #culture .container-sm .portfolio-box .portfolio-box-caption, #culture .container-md .portfolio-box .portfolio-box-caption, #culture .container-lg .portfolio-box .portfolio-box-caption, #culture .container-xl .portfolio-box .portfolio-box-caption {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10182,19 +10182,19 @@ header.masthead h1 {
   padding: 10px 20px;
 }
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category,
-#cultura .container-fluid .portfolio-box .portfolio-box-caption .project-category, #cultura .container-sm .portfolio-box .portfolio-box-caption .project-category, #cultura .container-md .portfolio-box .portfolio-box-caption .project-category, #cultura .container-lg .portfolio-box .portfolio-box-caption .project-category, #cultura .container-xl .portfolio-box .portfolio-box-caption .project-category {
+#culture .container-fluid .portfolio-box .portfolio-box-caption .project-category, #culture .container-sm .portfolio-box .portfolio-box-caption .project-category, #culture .container-md .portfolio-box .portfolio-box-caption .project-category, #culture .container-lg .portfolio-box .portfolio-box-caption .project-category, #culture .container-xl .portfolio-box .portfolio-box-caption .project-category {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
 }
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-name, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-name,
-#cultura .container-fluid .portfolio-box .portfolio-box-caption .project-name, #cultura .container-sm .portfolio-box .portfolio-box-caption .project-name, #cultura .container-md .portfolio-box .portfolio-box-caption .project-name, #cultura .container-lg .portfolio-box .portfolio-box-caption .project-name, #cultura .container-xl .portfolio-box .portfolio-box-caption .project-name {
+#culture .container-fluid .portfolio-box .portfolio-box-caption .project-name, #culture .container-sm .portfolio-box .portfolio-box-caption .project-name, #culture .container-md .portfolio-box .portfolio-box-caption .project-name, #culture .container-lg .portfolio-box .portfolio-box-caption .project-name, #culture .container-xl .portfolio-box .portfolio-box-caption .project-name {
   font-size: 1rem;
   padding-top: 0.5em;
 }
 #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption,
-#cultura .container-fluid .portfolio-box:hover .portfolio-box-caption, #cultura .container-sm .portfolio-box:hover .portfolio-box-caption, #cultura .container-md .portfolio-box:hover .portfolio-box-caption, #cultura .container-lg .portfolio-box:hover .portfolio-box-caption, #cultura .container-xl .portfolio-box:hover .portfolio-box-caption {
+#culture .container-fluid .portfolio-box:hover .portfolio-box-caption, #culture .container-sm .portfolio-box:hover .portfolio-box-caption, #culture .container-md .portfolio-box:hover .portfolio-box-caption, #culture .container-lg .portfolio-box:hover .portfolio-box-caption, #culture .container-xl .portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
 }
 
