--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 {{ section.text_style | default: 'text-center' }}">
-        <h2 class="text-white mt-0 text-center">{{ section.title }}</h2>
+        <h2 class="text-white mt-0 text-center">{% t section.title %}</h2>
         <hr class="divider light my-4">
-        <div class="text-white-75 mb-4 ">{{ section.text | markdownify }}</div>
+        <div class="text-white-75 mb-4 ">{% t section.text %}</div>
       </div>
     </div>
     {% include actions.html actions=section.actions %}
