--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,6 +1,6 @@
 <section class="page-section" id="{{ section.section_id }}">
   <div class="container-fluid p-0">
-    <h3 class="text-center mt-0">{{ section.title }}</h3>
+    <h3 class="text-center mt-0">{% t section.title %}</h3>
     <hr class="divider my-4">
     <div class="row justify-content-center">
       {% for client in section.clients %}
