--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <h2 class="mt-0">{{ section.title }}</h2>
+        <h2 class="mt-0">{% t section.title %}</h2>
         <hr class="divider my-4">
-        <p class="text-muted mb-5">{{ section.text }}</p>
+        <p class="text-muted mb-5">{% t section.text %}</p>
       </div>
     </div>
     <div class="row justify-content-center">
