--- a/_includes/culture.html
+++ b/_includes/culture.html
@@ -1,6 +1,6 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container-fluid p-0">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <h2 class="text-center mt-0">{% t section.title %}</h2>
     <hr class="divider my-4">
     <div class="row no-gutters">
       {% for item in section.items %}
@@ -9,10 +9,10 @@
           <img class="img-fluid" src="assets/img/culture/{{ item.icon }}" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-75">
-              {{ item.title }}
+              {% t item.title %}
             </div>
             <div class="project-name">
-              {{ item.text }}
+              {% t item.text %}
             </div>
           </div>
         </a>
