--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,6 +1,6 @@
 <div id="portfolio" class="{{ section.background_style }}">
   <div class="container-fluid p-0">
-    <h3 class="text-center mt-0">{{ section.title }}</h3>
+    <h3 class="text-center mt-0">{% t section.title %}</h3>
     <hr class="divider my-4">
     <div class="row no-gutters">
       {% for proj in section.projects %}
@@ -9,10 +9,10 @@
           <img class="img-fluid" src="assets/img/portfolio/thumbnails/{{ proj.icon }}" alt="">
           <div class="portfolio-box-caption">
             <div class="project-category text-white-75">
-              {{ proj.title }}
+              {% t proj.title %}
             </div>
             <div class="project-name">
-              {{ proj.text }}
+              {% t proj.text %}
             </div>
           </div>
         </a>
