--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,6 +1,6 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <h2 class="text-center mt-0">{% t section.title %}</h2>
     <hr class="divider my-4">
     <div class="row justify-content-center">
       <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
@@ -18,9 +18,9 @@
       <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
         <div class="mt-5">
           <i class="{{fa}} fa-4x {{ service.icon }} text-primary mb-4"></i>
-          <h3 class="h4 mb-2">{{ service.title }}</h3>
+          <h3 class="h4 mb-2">{% t service.title %}</h3>
           <div class="text-muted mb-0">
-            {{ service.text }}
+            {% t service.text %}
           </div>
         </div>
       </div>
