--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,6 +2,19 @@
   height: 15em !important;
   min-height: 15em !important;
 }
+
 .page-section-smaller {
   padding: 2rem 0;
+}
+
+.language-toogle {
+  padding-right: 1rem;
+
+  & .btn-group .btn {
+    background-color: white;
+
+    &:hover {
+      background-color: #343a40;
+    }
+  }
 }
