--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,13 +5,13 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property=’og:title’ content='SaibroTech'/>
-  <meta property=’og:image’ content='/assets/img/site-thumbnail.jpg'/>
-  <meta property=’og:description’ content='Desenvolvemos softwares personalizados utilizando metodologias ágeis'/>
-  <meta property=’og:url’ content='https://www.saibro.tech/'/>
-  <meta property='og:image:width' content='1200' />
-  <meta property='og:image:height' content='627' />
-  <meta property="og:type" content='website'/>
+  <meta property="og:title" content="SaibroTech"/>
+  <meta property="og:image" content="D:/Users/edval/Documents/git/site/assets/img/site-thumbnail.jpg"/>
+  <meta property="og:description" content="Desenvolvemos softwares personalizados utilizando metodologias ágeis"/>
+  <meta property="og:url" content="https://www.saibro.tech/"/>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="627" />
+  <meta property="og:type" content="website"/>
 
   <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
   <!-- Favicon-->
