--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="SaibroTech"/>
-  <meta property="og:image" content="D:/Users/edval/Documents/git/site/assets/img/site-thumbnail.jpg"/>
+  <meta property="og:image" content="https://www.saibro.tech/assets/img/site-thumbnail.jpg"/>
   <meta property="og:description" content="Desenvolvemos softwares personalizados utilizando metodologias ágeis"/>
   <meta property="og:url" content="https://www.saibro.tech/"/>
   <meta property="og:image:width" content="1200" />
