--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <img class="logo-white" src="assets/img/logo-white.png" alt="{{ site.title }}">
-      <img class="logo-color" src="assets/img/logo-color.png" alt="{{ site.title }}">
+      <img class="logo-white" src="assets/img/logo-white.png" alt="{{ site.title }} {% t site.description %}">
+      <img class="logo-color" src="assets/img/logo-color.png" alt="{{ site.title }} {% t site.description %}">
     </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,9 +10,9 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto my-2 my-lg-0">
         <li class="nav-item language-toogle">
-          <div class="btn-group btn-group-sm" role="group">
-            <a type="button" href="/en" class="btn btn-outline-dark {% if site.lang == 'en' %} active {% endif %}">en</a>
-            <a type="button" href="/" class="btn btn-outline-dark {% if site.lang == 'pt_BR' %} active {% endif %}">pt</a>
+          <div class="btn-group btn-group-sm" role="group" aria-label="{% t nav.language.label %}">
+            <a type="button" hreflang="en" href="/en" aria-label="{% t nav.language.en %}" role="button" class="btn btn-outline-dark {% if site.lang == 'en' %} active {% endif %}">en</a>
+            <a type="button" hreflang="pt-BR" href="/" aria-label="{% t nav.language.pt %}" role="button" class="btn btn-outline-dark {% if site.lang == 'pt-BR' %} active {% endif %}">pt</a>
           </div>
         </li>
         {% for item in site.data.menus.header  %}
