--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ site.lang }}">
 
 <head>
 
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="SaibroTech"/>
   <meta property="og:image" content="https://www.saibro.tech/assets/img/site-thumbnail.jpg"/>
-  <meta property="og:description" content="Desenvolvemos softwares personalizados utilizando metodologias ágeis"/>
+  <meta property="og:description" content="{% t site.description %}"/>
   <meta property="og:url" content="https://www.saibro.tech/"/>
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="627" />
@@ -27,6 +27,10 @@
   <link href="{{ "/assets/css/creative.css" | prepend: site.baseurl_root }}" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Hreflang -->
+  <link rel="canonical" href="{{ site.baseurl }}">
+  <link rel="alternate" hreflang="pt-BR" href="/">
+  <link rel="alternate" hreflang="en" href="/en">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
