--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,9 +28,9 @@
   <!-- Custom CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
   <!-- Hreflang -->
-  <link rel="canonical" href="{{ site.baseurl }}">
-  <link rel="alternate" hreflang="pt-BR" href="/">
-  <link rel="alternate" hreflang="en" href="/en">
+  <link rel="canonical" href="{{ page.url | absolute_url }}">
+  <link rel="alternate" hreflang="pt-BR" href="{{ site.url }}/">
+  <link rel="alternate" hreflang="en" href="{{ site.url }}/en/">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
