--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,15 +5,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="SaibroTech"/>
-  <meta property="og:image" content="https://www.saibro.tech/assets/img/site-thumbnail.jpg"/>
+  <meta name="description" content="{% t site.description %}">
   <meta property="og:description" content="{% t site.description %}"/>
-  <meta property="og:url" content="https://www.saibro.tech/"/>
+  <meta property="og:image" content="https://www.saibro.tech/assets/img/site-thumbnail.jpg"/>
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="627" />
   <meta property="og:type" content="website"/>
 
-  <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+  <!-- <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title> -->
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
@@ -28,7 +27,6 @@
   <!-- Custom CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
   <!-- Hreflang -->
-  <link rel="canonical" href="{{ page.url | absolute_url }}">
   <link rel="alternate" hreflang="pt-BR" href="{{ site.url }}/">
   <link rel="alternate" hreflang="en" href="{{ site.url }}/en/">
 
