--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,5 +1,5 @@
 <section class="page-section" id="{{ section.section_id }}">
-  <div class="container-fluid p-0">
+  <div class="container p-0">
     <h3 class="text-center mt-0">{% t section.title %}</h3>
     <hr class="divider my-4">
     <div class="row justify-content-center">
