--- a/_includes/members.html
+++ b/_includes/members.html
@@ -10,10 +10,14 @@
           <img class="fa fa-4x text-primary" src="{{ member.image }}" alt="{{ member.title }}">
           <h3 class="mb-2">{{ member.title }}</h3>
           <p class="text-white-75 mb-0">{% t member.text %}</p>
-          <a href="{{ member.linkedin.url }}" target="_blank"><i
-              class="{{fa}} {{member.linkedin.icon}} fa-2x mt-2 text-white" aria-label="{% t member.linkedin.label %}"></i></a>
-          <a href="{{ member.github.url }}" target="_blank"><i
-              class="{{fa}} {{member.github.icon}} fa-2x mt-2 text-white" aria-label="{% t member.github.label %}"></i></a>
+          <a class="member-link" href="{{ member.linkedin.url }}" target="_blank"
+            aria-label="{% t member.linkedin.label %}">
+            <i class="{{fa}} {{member.linkedin.icon}} fa-2x mt-2 text-white"></i>
+          </a>
+          <a class="member-link" href="{{ member.github.url }}" target="_blank"
+            aria-label="{% t member.github.label %}">
+            <i class="{{fa}} {{member.github.icon}} fa-2x mt-2 text-white"></i>
+          </a>
           <p class="text-white-75 text-monospace mb-0">"{% t member.subtext %}"</p>
         </div>
       </div>
