--- a/_sass/_member-box.scss
+++ b/_sass/_member-box.scss
@@ -1,21 +1,32 @@
 .member-box {
-    max-width: 400px;
-    margin: 50px auto 0;
-    @media (min-width: 992px) {
-        margin: 20px auto 0;
-    }
-    h3 {
+  max-width: 400px;
+  margin: 50px auto 0;
+
+  @media (min-width: 992px) {
+    margin: 20px auto 0;
+  }
+
+  h3 {
     min-height: 60px;    
-    }
-    p {
-        margin-bottom: 0;
-        min-height: 48px;
-    }
-    img {
-      width: 80%;
-      height: 80%;
-      object-fit: cover;
-      overflow: hidden;
-      border-radius: 50%;
-    }
+  }
+
+  p {
+    margin-bottom: 0;
+    min-height: 48px;
+  }
+
+  img {
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
+  .member-link {
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+  }
+  
 }
